fix: accordions not animating on firefox or apple devices

--- a/css/main.css
+++ b/css/main.css
@@ -32,21 +32,34 @@
     cursor: pointer;
   }
 
-  details::details-content {
-    opacity: 0;
-    block-size: 0;
-    overflow: hidden;
-    transform: translateY(-16px);
-    transition:
-      block-size 500ms ease-in-out,
-      opacity 500ms ease-in-out,
-      transform 500ms ease-in-out,
-      content-visibility 500ms ease-in-out allow-discrete;
+  html:not(.js) details::details-content {
+    @apply block-0 opacity-0 overflow-hidden duration-500 ease-in-out;
+    transition: block-size 500ms ease-in-out, opacity 500ms ease-in-out, transform 500ms ease-in-out, content-visibility 500ms ease-in-out allow-discrete;
   }
 
-  details[open]::details-content {
+  html:not(.js) details[open]::details-content {
+    @apply block-auto opacity-100 transform-none;
+  }
+
+  html.js .accordion-content-wrapper {
+    display: grid;
+    grid-template-rows: 0fr;
+    opacity: 0;
+    transition: grid-template-rows 500ms ease-in-out, opacity 500ms ease-in-out;
+  }
+
+  details .accordion-inner {
+    overflow: hidden;
+    transform: translateY(-16px);
+    transition: transform 500ms ease-in-out;
+  }
+
+  details.is-open .accordion-content-wrapper {
+    grid-template-rows: 1fr;
     opacity: 1;
-    block-size: auto;
+  }
+
+  details.is-open .accordion-inner {
     transform: translateY(0);
   }
 
